chore: add covid.id on cc

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 				<i class="bi bi-instagram" style="color: rgb(114, 0, 114)"></i>
 				<i class="bi bi-twitter" style="color: rgb(0, 148, 198)"></i>
 			</div>
-			<p class="cc">Copyright © 2022- All rights reserved</p>
+			<p class="cc">Copyright © 2022-COVID.ID All rights reserved</p>
 		</footer>
 		<script src="js/main.js"></script>
 	</body>
